tests/compile_fail/state/multiple_superstate_args.stderr
error: the `moku::superstate` attribute requires a single State name as an argument, e.g. `#[superstate(Top)]`
  --> tests/compile_fail/state/multiple_superstate_args.rs:17:5
   |
17 |     #[superstate(Top, Top)]
   |     ^
